--- a/client/index.html
+++ b/client/index.html
@@ -1,20 +1,20 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
 
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Presentation Trainer</title>    
-    <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
+    <title>Presentation Trainer - プレゼン練習ツール</title>
+    <meta name="description" content="1台のPCでプレゼン練習を完結させるツール。画面キャプチャとWebカメラを合成表示し、ドラッグ移動や録画が可能です。" />
+    <!-- Fonts: Courier New (monospace for tech feel) + System fonts (readability) -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
+    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="dark">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script
